--- a/IRCBot/IRCBot.csproj
+++ b/IRCBot/IRCBot.csproj
@@ -64,7 +64,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="starksoft.aspen">
-      <HintPath>..\..\smartirc4net-1.0\smartirc4net-1.0\bin\debug\starksoft.aspen.dll</HintPath>
+      <HintPath>DLL\starksoft.aspen.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
@@ -87,10 +87,10 @@
     <Reference Include="WindowsFormsIntegration" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="Testing\Form1.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
+    <Compile Include="Testing\Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="DB\F_Get_Stats_Result.cs">
@@ -162,6 +162,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <None Include="App - Copy.config" />
     <None Include="App.config" />
     <EntityDeploy Include="DB\IrcDatabase.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
@@ -180,7 +181,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Form1.resx">
+    <EmbeddedResource Include="Testing\Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ProjectInstaller.resx">
