Added a "buffer" to sending random messages. This makes sure, that the same message is not send in a row.

--- a/IRCBot/IRCBot.csproj
+++ b/IRCBot/IRCBot.csproj
@@ -87,6 +87,12 @@
     <Reference Include="WindowsFormsIntegration" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DB\rand_messages.cs">
+      <DependentUpon>IrcDatabase.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DB\rand_messages_old.cs">
+      <DependentUpon>IrcDatabase.tt</DependentUpon>
+    </Compile>
     <Compile Include="Testing\Form1.cs">
       <SubType>Form</SubType>
     </Compile>
